Fix OfficeHours and Leaderboard height being too tall.
Minor adjustments to office hours to accomodate.

--- a/frontend/src/app/signage/widgets/leaderboard/leaderboard.widget.css
+++ b/frontend/src/app/signage/widgets/leaderboard/leaderboard.widget.css
@@ -1,5 +1,5 @@
 .full-size-pane {
-  min-height: 464px !important;
+  min-height: 100% !important;
   min-width: 100% !important;
   border-color: transparent !important;
   margin: 0px !important;
